# modularml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  a__arithmetic__module_8hpp_source.html  a__data__parser_8hpp_source.html  a__tensor_8hpp_source.html  array__mml_8hpp_source.html  classArithmeticModule-members.html  classArithmeticModule__inherit__graph.map  classArithmetic__mml.html  classArithmetic__mml__inherit__graph.md5  classConvNode-members.html  classConvNode.html  classConvNode__coll__graph.md5  classConvNode__inherit__graph.map  classDataParser-members.html  classGemmModule.html  classGemmModule__inherit__graph.map  classGemmNode-members.html  classGemmNode__coll__graph.md5  classGemmNode__inherit__graph.map  classGemm__mml-members.html  classModel-members.html  classModel.html  classModel__mml-members.html  classModel__mml.html  classModel__mml__inherit__graph.md5  classNode.html  classNode__inherit__graph.map  classNode__inherit__graph.md5  classOnnxGemmModule.html  classOnnxGemmModule__inherit__graph.map  classOnnxGemm__mml__coll__graph.map  classSwishNode.html  classSwishNode__inherit__graph.map  classTanHNode-members.html  (+37 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  invalid.md
.github/workflows/: branch_police.yaml  ci_cd.yaml  clang_format.yaml  coverage_badge.yaml  issue_police.yaml  pr_police.yaml  super_linter.yaml  upload_docs_coverage.yaml  upload_documentation.yaml
Pytorch Code/: Alexnet_pytorch.py  LeNet_pyrotch.py  LeNet_pytorch.py
docs/: Dropout__node_8hpp_source.html  ReLU__node_8hpp_source.html  Sigmoid__node_8hpp_source.html  Swish__node_8hpp_source.html  TanH__node_8hpp_source.html  _2home_2runner_2work_2modularml_2modularml_2src_2include_2utility_2profiler_8hpp-example.html  a__arithmetic__module_8hpp_source.html  a__data__loader_8hpp_source.html  a__data__parser_8hpp_source.html  a__gemm_8hpp_source.html  a__image__resizer__and__cropper_8hpp_source.html  a__model_8hpp_source.html  a__node_8hpp_source.html  a__normalizer_8hpp_source.html  a__onnx__gemm_8hpp_source.html  a__tensor_8hpp_source.html  add_8hpp_source.html  annotated.html  array__mml_8hpp_source.html  array__utility_8hpp_source.html  avg__pool_8hpp_source.html  avg__pooling_8hpp_source.html  base64_8hpp_source.html  classAddNode-members.html  classAddNode.html  classAddNode__coll__graph.map  classAddNode__coll__graph.md5  classAddNode__inherit__graph.md5  classArithmeticModule-members.html  classArithmeticModule.html  classArithmeticModule__inherit__graph.md5  classArithmetic__mml-members.html  classArithmetic__mml.html  classArithmetic__mml__coll__graph.map  classAvgPoolNode-members.html  classAvgPoolNode.html  classAvgPoolNode__coll__graph.map  classAvgPoolNode__inherit__graph.md5  classAvgPoolingNode__mml-members.html  classAvgPoolingNode__mml.html  (+394 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+16 more)
include/: modularml  types_integer.txt  types_real.txt
include/backend/: data_parser.hpp  model.hpp  parser_helper.hpp
include/datastructures/: array_utils.hpp  mml_array.hpp  tensor.hpp  tensor_operations.hpp  tensor_utils.hpp
include/nodes/: a_node.hpp  add.hpp  avg_pool.hpp  constant.hpp  conv.hpp  dropout.hpp  (+16 more)
search/: all_6.js  all_e.js  classes_1.js  classes_2.js  classes_8.js  functions_0.js  functions_2.js  functions_a.js
src/: Add_node.cpp  Add_node.tpp  Dropout_node.cpp  Dropout_node.tpp  ELU_node.cpp  ELU_node.tpp  Gelu_node.cpp  Gelu_node.tpp  LeakyReLU_node.cpp  LeakyReLU_node.tpp  ReLU_node.cpp  ReLU_node.tpp  Sigmoid_node.cpp  Sigmoid_node.tpp  SoftMax_node.tpp  Swish_node.cpp  Swish_node.tpp  TanH_node.cpp  TanH_node.tpp  a_arithmetic_module.hpp##8c3fbe91857e276da27e97f553e0fc87.gcov  a_tensor.hpp##bfd866e2aff06ed847fd4c5e7ce1dbc0.gcov  a_tensor_func.cpp  aligned_buffer.h##b1b5cc9c94532b5472050183821aaaf6.gcov  alloc_traits.h##ab38c21af5b1d06b248074e58c753bc8.gcov  alloc_traits.h##d541e135d403a6cb94abd40d1067341a.gcov  allocated_ptr.h##afd7d750a587f929528a3ed7c351c765.gcov  allocator.h##9d1214fc60a37c076d6c6113134da7b5.gcov  array_mml.hpp##953f7b44f9890bfff062dc30e7f3bcb8.gcov  array_mml.tpp  atomicity.h##8f493cde9507b59f628be1ce69a4321f.gcov  basic_string.h##5dd4601f9d7cd1b4773b919df7ddea62.gcov  basic_string.tcc##6160c2985dbcde4f577b6de1eb6f76db.gcov  c++config.h##afd2e89f392f3cf817d0026941da23bb.gcov  char_traits.h##d11494846d90533fcd30a0f4261c7d5b.gcov  charconv.h##d2a19b8ec08ce1317ef6f3865cd17d06.gcov  conv_node.cpp  conv_node.tpp  cpp_type_traits.h##7b69e5f52ea4878bc0fe4dc0db2ddbc7.gcov  flatten_node.cpp  flatten_node.tpp  (+64 more)
src/openblas/: CMakeLists.txt
src/openblas/datastructures/: tensor_gemm.cpp
tests/: test1.cpp  test2.cpp  test_Add_node.cpp  test_AlexNet.hpp  test_Alexnet.cpp  test_ImageNet.cpp  test_LeNet.cpp  test_LeNet.hpp  test_activation_nodes.cpp  test_benchmark_gemm.cpp  test_conv_node.cpp  test_flatten_node.cpp  test_gemm_node.cpp  test_image_loader.cpp  test_image_resizer_and_cropper.cpp  test_image_to_guess.cpp  test_log_softmax_node.cpp  test_lrn_node.cpp  test_matmul_node.cpp  test_mml_ReLU.cpp  test_mml_Swish.cpp  test_mml_Tanh.cpp  test_mml_TensorFunction_ReLU.cpp  test_mml_TensorFunction_SoftMax.cpp  test_mml_TensorFunction_Swish.cpp  test_mml_TensorFunction_Tanh.cpp  test_mml_arithmetic.cpp  test_mml_conv.cpp  test_mml_elementwise.cpp  test_mml_gemm.cpp  test_mml_matmul.cpp  test_mml_onnx_gemm.cpp  test_mml_pooling.cpp  test_mml_tensor.cpp  test_model.cpp  test_nodes.cpp  test_normalizer.cpp  test_parser_model.cpp  test_profiler.cpp  test_reshape_node.cpp  (+5 more)
(+306 files in other folders)
