message(STATUS "Using OpenBLAS GEMM configuration")
SET(MEMORY_ALIGNMENT 64)
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-march=native)
endif()
add_definitions(-DUSE_OPENBLAS_GEMM)
find_library(OPENBLAS_LIB openblas REQUIRED)
if(OPENBLAS_LIB)
    message(STATUS "Found OpenBLAS at ${OPENBLAS_LIB}")
    target_link_libraries(${PROJECT_NAME} PRIVATE ${OPENBLAS_LIB})
else()
    message(FATAL_ERROR "OpenBLAS not found!")
endif()